<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral50"
    tools:context=".code">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral40"
        android:text="@string/morse_code_converter"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="500dp"
        android:background="@color/black"
        android:gravity="start"
        android:hint="Enter the text here!!"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-14dp" />

    <EditText
        android:id="@+id/edit_text_output"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="96dp"
        android:background="@color/black"
        android:gravity="start"
        android:hint="Output will come here"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="26dp" />

    <Button
        android:id="@+id/encode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encode"
        android:textStyle="bold"
        app:backgroundTint="@color/material_dynamic_neutral30"
        app:layout_constraintBaseline_toBaselineOf="@+id/clear_button"
        app:layout_constraintEnd_toStartOf="@+id/clear_button"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/decode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decode"
        android:textStyle="bold"
        app:backgroundTint="@color/material_dynamic_neutral30"
        app:layout_constraintBaseline_toBaselineOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toEndOf="@+id/clear_button" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textStyle="bold"
        app:backgroundTint="@color/material_dynamic_neutral30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textStyle="bold"
        app:backgroundTint="@color/material_dynamic_neutral30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

</androidx.constraintlayout.widget.ConstraintLayout>